--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "devsocial-api",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js"
@@ -12,7 +13,6 @@
   "dependencies": {
     "express": "^4.18.2",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.20",
-    "type": "module"
+    "nodemon": "^2.0.20"
   }
 }
