--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.1.2",
     "nodemon": "^2.0.20"
   }
 }
