--- a/package.json
+++ b/package.json
@@ -2,25 +2,19 @@
   "name": "devsocial-api",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/devLucasmarts/devsocial-api.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.1",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "moment": "^2.29.4",
-    "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.1.2",
-    "nodemon": "^2.0.20"
-  }
+  "bugs": {
+    "url": "https://github.com/devLucasmarts/devsocial-api/issues"
+  },
+  "homepage": "https://github.com/devLucasmarts/devsocial-api#readme"
 }
